--- a/src/common/style/base.less
+++ b/src/common/style/base.less
@@ -1,32 +1,32 @@
+
 // *{
 //   margin: 0;
 //   padding: 0;
 // }
 //移动端点击高亮
-html,
-body {
+html,body{
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-input {
+input{
   border: none;
   outline: none;
   -webkit-appearance: none;
-  appearance: none;
+  -webkit-appearance: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-textarea {
+textarea{
   border: none;
   outline: none;
 }
-button {
+button{
   border: none;
   outline: none;
 }
-a {
+a{
   text-decoration: none;
   color: #333;
 }
-li {
+li{
   list-style-type: none;
 }
 //解决端遮罩层穿透
@@ -34,7 +34,7 @@ body.dialog-open {
   position: fixed;
   width: 100%;
 }
-.page {
+.page{
   padding: 0 50px;
   width: 100%;
   -webkit-box-sizing: border-box;
