--- a/src/common/style/mixin.less
+++ b/src/common/style/mixin.less
@@ -1,7 +1,7 @@
 
  
  @import './base.less';
- @primary: #1baeae; // 主题色
+ @primary: #FA541C; // 主题色
  @orange: #FF6B01; 
  @bc: #F7F7F7;
  @fc:#fff;
